<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center|right"
    android:backgroundTint="#050505"
    android:orientation="vertical"
    android:padding="50px"
    android:textAlignment="center"
    tools:context=".Home">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20px"
        android:allowUndo="false"
        android:background="#03A9F4"
        android:hint="@string/Nombre2"
        android:padding="10px"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="400px"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edCampoMostrar"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_margin="10px"
                android:background="#03A9F4"
                android:editable="false"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edCampoMostrar2"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_margin="10px"
                android:background="#03A9F4"
                android:clickable="false"
                android:editable="false"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edCampoMostrar3"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_margin="10px"
                android:background="#03A9F4"
                android:editable="false"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="400px"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/etPrecioA"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_margin="10px"
                android:background="#03A9F4"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textColorHighlight="#E11010"
                android:textColorHint="#ED0505"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/etCantA"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_margin="10px"
                android:background="#03A9F4"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#FBFBFB" />

            <TextView
                android:id="@+id/etValorA"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_margin="10px"
                android:background="#03A9F4"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FBFBFB" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="ARTÍCULOS EN VENTA"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:background="#B1B8BC"
        android:padding="25px"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/leche" />

        <Button
            android:id="@+id/btnCL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:gravity="center"
            android:onClick="ComprarLeche"
            android:text="@string/ComprarLeche"
            android:textAlignment="center"
            android:textSize="9sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:gravity="center"
            app:srcCompat="@drawable/agua" />

        <Button
            android:id="@+id/btnCA"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="ComprarAgua"
            android:text="@string/ComprarAgua"
            android:textSize="9sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15px"
        android:text="OPCIONES"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="20px">

        <Button
            android:id="@+id/btnPintar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#03A9F4"
            android:onClick="pintar"
            android:text="Cambiar de color"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnTotal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#03A9F4"
            android:onClick="Total"
            android:text="@string/Total" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#03A9F4"
            android:onClick="volver"
            android:text="@string/BotonRegresar" />

    </LinearLayout>

    <TextView
        android:id="@+id/etCantTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15px"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etValorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15px"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp" />


</LinearLayout>